--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0",
+    "yaml": "^2.1.0",
+    "yamljs": "^0.3.0"
   }
 }
