--- a/package.json
+++ b/package.json
@@ -23,13 +23,10 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "faker": "^6.6.6",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.3",
+    "mongoose": "^6.3.5",
     "nodemon": "^2.0.16",
     "swagger-jsdoc": "^6.2.1",
-    "swagger-ui-express": "^4.4.0",
-    "yaml": "^2.1.0",
-    "yamljs": "^0.3.0"
+    "swagger-ui-express": "^4.4.0"
   }
 }
