--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "faker": "^6.6.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0",
