--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "node-rsa": "^1.0.8",
+    "nodemon": "^2.0.19",
     "point-in-polygon": "^1.1.0",
     "sequelize": "^6.21.2",
     "serverless": "^1.83.2",
